5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/1685/executions/1578_994.log
== TEST (2019-03-20 18:07:04) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:07:09) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.246003
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:55:23) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:55:39) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:56:15) 
-- CODE:
print("Universidade Federal do Amazonas")
x("Universidade federal do amazonas")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x("Universidade federal do amazonas")
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:56:23) 
-- CODE:
print("Universidade Federal do Amazonas")
print("Universidade federal do amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
Universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 08:56:29) 
-- CODE:
print("Universidade Federal do Amazonas")
print("Universidade federal do amazonas")
-- EXECUTION TIME:
0.196578
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
Universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:57:01) 
-- CODE:
print("universidade federal do amazonas")
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 08:57:05) 
-- CODE:
print("universidade federal do amazonas")
-- EXECUTION TIME:
0.164489
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 08:57:31) 
-- CODE:
print("universidade federal do amazonas")
universidade federal do amazonas
-- EXECUTION TIME:
0.116915
-- ERROR:
  File "/home/codebench/codes/1578/994/main.py", line 2
    universidade federal do amazonas
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:58:10) 
-- CODE:
print("que universidade vc estuda:")
print
-- OUTPUT:
que universidade vc estuda:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:58:33) 
-- CODE:
print("que universidade vc estuda:")
print=universidade federal do amazonas

-- ERROR:
File "XXXX", line 2
    print=universidade federal do amazonas
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 08:58:53) 
-- CODE:
print("que universidade vc estuda:")
print=("universidade federal do amazonas")


-- OUTPUT:
que universidade vc estuda:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 09:10:37) 
-- CODE:
"universidade federal do amazonas"


-- OUTPUT:
que universidade vc estuda:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 09:10:38) 
-- CODE:
"universidade federal do amazonas"


-- EXECUTION TIME:
0.201066
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 09:12:26) 
-- CODE:
>>>"universidade federal do amazonas"


-- ERROR:
File "XXXX", line 1
    >>>"universidade federal do amazonas"
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 10:58:45) 
-- CODE:
print("universidade federal do amazonas")


-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 10:58:50) 
-- CODE:
print("universidade federal do amazonas")


-- EXECUTION TIME:
0.203954
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:03:29) 
-- CODE:
print("universidade federal do amazonas")


-- EXECUTION TIME:
0.163028
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:04:01) 
-- CODE:
print("universidade federal do amazonas")
print(universidade federal do amazonas)


-- ERROR:
File "XXXX", line 2
    print(universidade federal do amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:04:42) 
-- CODE:
print("universidade federal do amazonas")
x=(universidade federal do amazonas)


-- ERROR:
File "XXXX", line 2
    x=(universidade federal do amazonas)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:04:58) 
-- CODE:
print("universidade federal do amazonas")
x=universidade federal amazonas


-- ERROR:
File "XXXX", line 2
    x=universidade federal amazonas
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:05:09) 
-- CODE:
print("universidade federal do amazonas")
x=universidade federal amazonas


-- EXECUTION TIME:
0.16519
-- ERROR:
  File "/home/codebench/codes/1578/994/main.py", line 2
    x=universidade federal amazonas
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:09:02) 
-- CODE:
print("onde estudo licenciatura em matemática:")
print=("universidade federal do amazonas")


-- OUTPUT:
onde estudo licenciatura em matemática:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:09:12) 
-- CODE:
print("onde estudo licenciatura em matemática:")
print=("universidade federal do amazonas")


-- EXECUTION TIME:
0.291766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/994/main.py", line 1, in <module>
    print("onde estudo licenciatura em matem\xe1tica:")
UnicodeEncodeError: 'ascii' codec can't encode character '\xe1' in position 33: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:19:43) 
-- CODE:
print("universidade federal do amazonas")


-- EXECUTION TIME:
0.163088
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:30:40) 
-- CODE:
print("\ndigite o nome da universidade.:")


-- OUTPUT:
digite o nome da universidade.:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:31:44) 
-- CODE:
print("\ndigite o nome da universidade.:")
print("universidade federal do amazonas")

-- EXECUTION TIME:
0.219331
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
digite o nome da universidade.:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:31:52) 
-- CODE:
print("\ndigite o nome da universidade.:")
print("universidade federal do amazonas")

-- OUTPUT:
digite o nome da universidade.:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:32:00) 
-- CODE:
print("\ndigite o nome da universidade.:")
print("universidade federal do amazonas")

-- EXECUTION TIME:
0.152566
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
digite o nome da universidade.:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:32:10) 
-- CODE:
print("\ndigite o nome da universidade.:")


-- EXECUTION TIME:
0.14583
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
digite o nome da universidade.:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:32:19) 
-- CODE:
print("\ndigite o nome da universidade.:")


-- EXECUTION TIME:
0.155864
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
digite o nome da universidade.:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:32:26) 
-- CODE:
print("\ndigite o nome da universidade.:")


-- OUTPUT:
digite o nome da universidade.:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:33:02) 
-- CODE:
print("\ndigite o nome da universidade.:")
x=(universiade fedral do amazonas)

-- EXECUTION TIME:
0.219354
-- ERROR:
  File "/home/codebench/codes/1578/994/main.py", line 2
    x=(universiade fedral do amazonas)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:33:20) 
-- CODE:
print("\ndigite o nome da universidade.:")
x=("universiade fedral do amazonas")

-- EXECUTION TIME:
0.163083
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
digite o nome da universidade.:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:33:39) 
-- CODE:
print("\ndigite o nome da universidade.:")


-- OUTPUT:
digite o nome da universidade.:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:42:45) 
-- CODE:
a=universidade federal do amazonas
print(a)


-- ERROR:
File "XXXX", line 1
    a=universidade federal do amazonas
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:43:18) 
-- CODE:
a=("universidade federal do amazonas")
print(a)


-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:43:24) 
-- CODE:
a=("universidade federal do amazonas")
print(a)


-- EXECUTION TIME:
0.191818
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:54:27) 
-- CODE:
texto=("universiade do amazonas")
print(texto)
-- EXECUTION TIME:
0.210652
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universiade do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:54:30) 
-- CODE:
texto=("universiade do amazonas")
print(texto)
-- OUTPUT:
universiade do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:54:36) 
-- CODE:
texto=("universiade do amazonas")
print(texto)
-- OUTPUT:
universiade do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:54:51) 
-- CODE:
texto=("universiade do amazonas")
print("texto.")
-- EXECUTION TIME:
0.191654
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
texto.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:54:57) 
-- CODE:
texto=("universiade do amazonas")
print("texto")
-- EXECUTION TIME:
0.162034
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
texto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:55:06) 
-- CODE:
texto=("universiade do amazonas:")
print("texto")
-- OUTPUT:
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:55:13) 
-- CODE:
texto=("universiade do amazonas:")
print("texto")
-- EXECUTION TIME:
0.123202
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
texto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:55:28) 
-- CODE:
texto=("universiade do amazonas:")
print("universidade federal do amazonas")
-- EXECUTION TIME:
0.142802
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:55:31) 
-- CODE:
texto=("universiade do amazonas:")
print("universidade federal do amazonas")
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 11:59:33) 
-- CODE:
var=input("universiade federal do amazonas:")
print("universidade federal do amazonas")
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:59:41) 
-- CODE:
var=input("universiade federal do amazonas:")
print("universidade federal do amazonas")
-- EXECUTION TIME:
0.155365
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
universidade federal do amazonas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 11:59:51) 
-- CODE:
var=input("universiade federal do amazonas:")
print("var")
-- EXECUTION TIME:
0.141278
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:00:01) 
-- CODE:
var=input("universiade federal do amazonas:")
print(var)
-- EXECUTION TIME:
0.097641
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
xx
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:00:16) 
-- CODE:
var=input("universiade federal do amazonas:")
print=var
-- EXECUTION TIME:
0.144299
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:00:47) 
-- CODE:
var=input("universiade federal do amazonas:")
print=(universidade federal do amazonas)
-- EXECUTION TIME:
0.137798
-- ERROR:
  File "/home/codebench/codes/1578/994/main.py", line 2
    print=(universidade federal do amazonas)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:00:54) 
-- CODE:
var=input("universiade federal do amazonas:")
print=("universidade federal do amazonas")
-- EXECUTION TIME:
0.129607
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:00:55) 
-- CODE:
var=input("universiade federal do amazonas:")
print=("universidade federal do amazonas")
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:01:09) 
-- CODE:
var=input("universiade federal do amazonas:")
print=("universidade federal do amazonas")
-- EXECUTION TIME:
0.132421
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
